--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@ header:
   actions:
     - label: "Go To Links"
       url: "/liniks/"
-  <!-- caption: "" -->
 excerpt: "Awesome New World page works as knowledge collection for the company members"
 intro: 
   - excerpt: 'This is example site and it's still under maintenance :)'
@@ -55,11 +54,11 @@ feature_row4:
 ---
 
 {% include feature_row id="intro" type="center" %}
-
+<!-- 
 {% include feature_row %}
 
 {% include feature_row id="feature_row2" type="left" %}
 
 {% include feature_row id="feature_row3" type="right" %}
 
-{% include feature_row id="feature_row4" type="center" %}
+{% include feature_row id="feature_row4" type="center" %} -->
