--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ header:
       url: "/liniks/"
 excerpt: "Awesome New World page works as knowledge collection for the company members"
 intro: 
-  - excerpt: 'This is example site and it's still under maintenance :)'
+  - excerpt: 'This is example site and it's still under maintenance.'
 ---
 
 {% include feature_row id="intro" type="center" %}
