--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ header:
   overlay_image: /assets/images/splash1.jpg
   actions:
     - label: "Go To Links"
-      url: "/liniks/"
+      url: "/links/"
 excerpt: "Awesome New World page works as knowledge collection for the company members"
 ---
 
-{% include feature_row id="intro" type="center" %}
+<!-- {% include feature_row id="intro" type="center" %} -->
